# kaitai_compress

./: README.md
_test/: generate-data  test-python.py
_test/compressed/: 25k_uuids.br  25k_uuids.zst_1  90_a.br  ascii_text.br
cpp_stl/: builtin.cpp  zlib.cpp
csharp/: CustomProcessor.cs  builtin.cs  zlib.cs
go/: builtin.go  zlib.go
java/: builtin.java  zlib.java
javascript/: builtin.js  zlib.js
lua/: builtin.lua
perl/: builtin.pm
python/: pyproject.toml  setup.cfg
python/kaitai/compress/: __init__.py  lz4.py  zlib.py
python/kaitai/compress/algorithms/: implode.py
rust/: builtin.rs  zlib.rs
swift/: builtin.swift  zlib.swift
