[metadata]
name = kaitai.compress
version = 0.1
# we need to put it into a separate git repo in order to use setuptools_scm
authors = Kaitai Project
url = https://github.com/kaitai-io/kaitai_compress
description = A library of wrappers of compressors
long_description = file: ReadMe.md
keywords = compression, archive
license = ?
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: Science

[options]
python_requires = >=3.4
zip_safe = True
packages = kaitai.compress
setup_requires = setuptools; # setuptools_scm;
test_suite = tests.tests

[options.extras_require]
lz4 = lz4 @ git+https://github.com/python-lz4/python-lz4
zstd = zstd @ git+https://github.com/sergey-dryabzhinsky/python-zstd
brotli = brotlipy @ git+https://github.com/python-hyper/brotlipy.git
